Added GetNPCsbyItem and Builds
