# go/api/rest/npc.go
@@ -19,7 +19,33 @@ func GetNPC(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	c, err := api.GetNPC(id)
+	c, err := api.GetNPC(int32(id))
+	if err != nil {
+		log.Printf("Failed to get npc: %s\n", err.Error())
+		http.Error(w, err.Error(), http.StatusExpectationFailed)
+		return
+	}
+
+	js := []byte{}
+	if js, err = json.Marshal(c); err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+	w.WriteHeader(http.StatusOK)
+	w.Write(js)
+}
+
+func GetNPCsByItem(w http.ResponseWriter, r *http.Request) {
+	var err error
+	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
+	vars := mux.Vars(r)
+	id, err := strconv.Atoi(vars["id"])
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusExpectationFailed)
+		return
+	}
+
+	c, err := api.GetNPCsByItem(id)
 	if err != nil {
 		log.Printf("Failed to get npc: %s\n", err.Error())
 		http.Error(w, err.Error(), http.StatusExpectationFailed)
