# go/swagger/server/npc.go
@@ -13,3 +13,8 @@ func GetNPC(w http.ResponseWriter, r *http.Request) {
 		w.WriteHeader(http.StatusOK)
 }
 
+func GetNPCsByItem(w http.ResponseWriter, r *http.Request) {
+		w.Header().Set("Content-Type", "application/json; charset=UTF-8")
+		w.WriteHeader(http.StatusOK)
+}
+
