# go/web/server/item.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 
 	"github.com/gorilla/mux"
+	"github.com/xackery/rebuildeq/go/swagger/client"
 )
 
 func GetItem(w http.ResponseWriter, r *http.Request) {
@@ -21,6 +22,29 @@ func GetItem(w http.ResponseWriter, r *http.Request) {
 		w.WriteHeader(http.StatusInternalServerError)
 		log.Println("Invalid status code", err.Error())
 		return
+	}
+
+	npcsBase, resp, err := api.NPCApi.GetNPCsByItem(nil, vars["id"])
+	type NPCsExtended struct {
+		*client.Npc
+		ZoneSnippet   string
+		ZoneSnippetId int32
+		ChanceSnippet int32
+	}
+
+	npcs := []*NPCsExtended{}
+	for i, _ := range npcsBase {
+		npc := &NPCsExtended{
+			Npc: &npcsBase[i],
+		}
+
+		if len(npc.SpawnsIn) > 0 {
+			npc.ZoneSnippet = npc.SpawnsIn[0].ZoneShortName
+			npc.ZoneSnippetId = npc.SpawnsIn[0].ZoneId
+			npc.ChanceSnippet = npc.SpawnsIn[0].Chance
+		}
+
+		npcs = append(npcs, npc)
 	}
 
 	tmp := getTemplate("")
@@ -50,12 +74,16 @@ func GetItem(w http.ResponseWriter, r *http.Request) {
 	type Content struct {
 		Site Site
 		Item interface{}
+		NPCs interface{}
 	}
 	content := Content{
 		Site: site,
 		Item: item,
+		NPCs: npcs,
 	}
-
+	for _, npc := range npcs {
+		log.Println(npc.Name)
+	}
 	w.WriteHeader(http.StatusOK)
 	if err = tmp.Execute(w, content); err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
